# activity_tracker

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: data_mapper.yml
docker/: docker-compose.yml
notebooks/: analysis.ipynb  data_addition_comparison.ipynb  dj_ingestion.ipynb  exploratory.ipynb  feature.ipynb  frailty_analysis.ipynb  import.ipynb  preprocess.ipynb  process_minute_data.ipynb  train.ipynb  transition_prob.ipynb  visit_analysis.ipynb
reports/: activity_tracker.pptx
src/activity_tracker/: preprocess.py  quality.py  utils.py
src/activity_tracker/pipeline/: __init__.py  ingestion.py  measurement.py  models.py  subject.py  visit.py
tests/: test_visit.py
